Fix typo, tks @julymartins3

--- a/5 periodo/Calculo_em_uma_variavel_complexa.tex
+++ b/5 periodo/Calculo_em_uma_variavel_complexa.tex
@@ -500,8 +500,8 @@ Podemos parametrizar no círculo unitário com a parametrização
 e pela parametrização podemos reescrever 
 
 \begin{align*}
-    \cos(\theta) &= \frac{1}{2} (e^{i \theta} + e^{ - i \theta}) = \frac{1}{2 i} \left(z + \frac{1}{z} \right) \\
-    \sin(\theta) &= \frac{1}{2} (e^{i \theta} - e^{ - i \theta}) = \frac{1}{2 i} \left(z - \frac{1}{z} \right)
+    \cos(\theta) &= \frac{1}{2} (e^{i \theta} + e^{ - i \theta}) = \frac{1}{2} \left(z + \frac{1}{z} \right) \\
+    \sin(\theta) &= \frac{1}{2i} (e^{i \theta} - e^{ - i \theta}) = \frac{1}{2 i} \left(z - \frac{1}{z} \right)
 \end{align*}
 
 \begin{ex}
