--- a/5 periodo/Calculo_em_uma_variavel_complexa.tex
+++ b/5 periodo/Calculo_em_uma_variavel_complexa.tex
@@ -479,6 +479,16 @@ $$\oint_C f(z) d z = 2 \pi i \sum_{j = 1}^m Res_{z = z_0} f(z)$$
 
 \section*{Métodos de resoluções de integrais reais}
 \label{s10}
+\begin{theorem}[Resíduo em polo simples nos reais]
+Se f tem um polo simples $z = a$ no eixo real, então
+
+\begin{equation*}
+    \lim_{r \to 0} \int_C f(z) d z = \pi i \mathrm{Res}_{z = a} f(z)
+\end{equation*}
+
+Onde C é o semi-circulo de raio r centrado em a com extremos em $a - r$ e $a + r$.
+\end{theorem}
+
 \begin{definition}[Valor principal]
 Se f é uma função continua em $(- \infty, \infty)$. Então, o \textbf{valor principal de Cauchy} da integral de f em $(- \infty, \infty)$ é definido como
 
